@@ -1,3 +1,11 @@
+2005-01-29  Dalibor Topic  <robilad@kaffe.org>
+
+	* include/Makefile.am (NOINSTALL_JNI_DERIVED_HDRS): Only create
+	classpath AWT, alsa, esd or libxmlj headers if the native libraries
+	for them should be built.
+
+	Reported by:  Nektarios K. Papadopoulos  <npapadop@inaccessnetworks.com>
+
 2005-01-28  Dalibor Topic  <robilad@kaffe.org>
 
 	* configure.ac: Added COND_NATIVE_SOUND conditional.
